--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body{
 header{
 	text-align: center;
 	opacity: 0;
-	background: url("../images/watercolor.png") no-repeat center;
+	background: url("../images/watercolor.png") no-repeat center; 
 	height: 90vh;
 	font-family: "Linotype Didot Oldstyle Figures Roman",serif;
 }
@@ -54,10 +54,10 @@ header h2{
 	position: fixed;
 	z-index: -1;
 	background: url("../images/me-paint.png")  no-repeat center;
-/*	-webkit-background-size: cover;
+	-webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-*/
+
 }
 
 #for-work{
@@ -66,10 +66,10 @@ header h2{
 	position: fixed;
 	z-index: -1;
 	background: url("../images/me-work-1.png") no-repeat center;
-/*	-webkit-background-size: cover;
+	-webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-*/
+
 }
 
 #for-contact{
