--- a/css/style.css
+++ b/css/style.css
@@ -819,7 +819,10 @@ html { height: 100%;}
 }
 
 #portfolio-image h2{
-	font-family: 'Linotype Didot Oldstyle Figures Roman',serif;
+	/*font-family: 'Linotype Didot Oldstyle Figures Roman',serif;*/
+	font-family: "Montserrat",sans-serif;
+	letter-spacing: 10px;
+	font-weight: bold;
 	margin-top: 65px;
 	font-size: 40px;
 }
@@ -832,14 +835,15 @@ html { height: 100%;}
 
 
 #portfolio-image p{
-	font-family: "Oxygen", sans-serif;
-	font-size: 15px;
+	/*font-family: "Oxygen", sans-serif;*/
+	font-family: "Cardo",serif;
+	font-size: 17px;
 	padding: 2%;
-	line-height: 25px;
+	line-height: 29px;
 }
 
 #portfolio-bg {
-	background: url("../images/misc-bg.png") no-repeat center; 
+	/*background: url("../images/misc-bg.png") no-repeat center; */
 	opacity: 0;
 	position: fixed;
 	height: 100%;
@@ -849,5 +853,20 @@ html { height: 100%;}
 
 
 .ux-content p, ul{
-	text-align: left;
+	text-align: left;	
+	font-family: "Cardo",serif;
+	font-size: 17px;
+	padding: 2%;
+	line-height: 29px;
+}
+
+.ux-content h3{
+	font-family: "Montserrat",sans-serif;
+	font-weight: bold;
+	letter-spacing: 5px;
+	font-size: 17px;
+}
+
+.ux-content i{
+	font-size: 20px;
 }
