--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ header h2{
 }
 
 .main-title a{
-	color: #5E5E5E;
+	color: #333;
 	transition: color 0.5s ease;
 	text-decoration: none;
 }
@@ -244,11 +244,11 @@ header h2{
 
 
 .work-title h2{
-	font-family: "Linotype Didot Oldstyle Figures Roman", serif;
-	letter-spacing: 5px;
+	font-family: "Montserrat", sans-serif;
+	letter-spacing: 10px;
 	font-weight: 400;
-	font-size: 45px;
-	margin-top: 5px;
+	font-size: 35px;
+	margin-top: 15px;
 	opacity: 0;
 }
 
@@ -352,7 +352,7 @@ header h2{
 	text-align: center;
 	transition: opacity 0.5s ease;
 	opacity: 0;
-	font-family: "Linotype Didot Oldstyle Figures Roman", serif;
+	font-family: "Cardo",serif;
 	text-align: center;
 }
 
@@ -858,16 +858,29 @@ html { height: 100%;}
 	height: 100%;
 	width: 100%;
 	z-index: -1;	
+	padding-bottom: 150px;
 }
 
 
-.ux-content p, ul{
+ul{
+	text-align: center;
+}
+
+.ux-content p{
 	text-align: left;	
 	font-family: "Cardo",serif;
 	font-size: 17px;
 	padding: 2%;
 	line-height: 29px;
 }
+.ux-content ul{
+	text-align: left;	
+	font-family: "Cardo",serif;
+	font-size: 17px;
+	padding: 2%;
+	line-height: 29px;
+}
+
 
 .ux-content h3{
 	font-family: "Montserrat",sans-serif;
