--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ header{
 	opacity: 0;
 	background: url("../images/watercolor.png") no-repeat center; 
 	height: 90vh;
-	font-family: "Linotype Didot Oldstyle Figures Roman",serif;
+	font-family: "Cardo",serif;
 }
 
 header p{
@@ -427,19 +427,20 @@ footer img{
 }
 
 #about p{
-	font-family: "Oxygen", sans-serif;
+	font-family: "Cardo",serif;
 	font-size: 15px;
 	padding: 2%;
 	line-height: 25px;
 }
 
 #about h2{
-	background: url("../images/blue-stroke.gif") no-repeat;
+	/*background: url("../images/blue-stroke.gif") no-repeat;*/
 	background-size: 300px;
 	background-position-y: -15px; 
 	padding: 2%;
-	font-family: 'Linotype Didot Oldstyle Figures Roman',serif; 
-	font-size: 50px;
+	font-family: "Montserrat",sans-serif; 
+	font-size: 25px;
+	letter-spacing: 	5px;
 	margin-top: 35px;
 }
 
@@ -639,8 +640,8 @@ html { height: 100%;}
 .sidebar-nav li a {
     display: block;
     color: #333;
-    font-family: 'Linotype Didot Oldstyle Figures Roman',serif;
-    font-size: 30px;
+    font-family: 'Montserrat',sans-serif;
+    font-size: 20px;
     text-decoration: none;
     padding: 10px 15px 10px 30px;    
     padding-top: 35px;
